content/develop/ai/redisvl/0.15.0/user_guide/_index.md
---
linkTitle: Guides
title: Guides
weight: 4
hideListLinks: true
url: '/develop/ai/redisvl/0.15.0/user_guide/'
---


Welcome to the RedisVL guides! Whether you're just getting started or building advanced AI applications, these guides will help you make the most of Redis as your vector database.

<div class="grid grid-cols-1 md:grid-cols-2 gap-4 my-6">
<a href="installation/" class="block p-5 border border-redis-pen-300 rounded-lg hover:border-redis-red-500 hover:shadow-md transition-all duration-200 no-underline hover:no-underline"><h3 class="mt-0 mb-2">📦 Installation</h3><p><strong>Set up RedisVL.</strong> Install the library and configure your Redis instance for vector search.</p><p class="text-sm opacity-75 mt-3">pip install • Redis Cloud • Docker</p></a>
<a href="getting_started/" class="block p-5 border border-redis-pen-300 rounded-lg hover:border-redis-red-500 hover:shadow-md transition-all duration-200 no-underline hover:no-underline"><h3 class="mt-0 mb-2">🚀 Getting Started</h3><p><strong>New to RedisVL?</strong> Start here to learn the basics and build your first vector search application in minutes.</p><p class="text-sm opacity-75 mt-3">Schema → Index → Load → Query</p></a>
<a href="how_to_guides/" class="block p-5 border border-redis-pen-300 rounded-lg hover:border-redis-red-500 hover:shadow-md transition-all duration-200 no-underline hover:no-underline"><h3 class="mt-0 mb-2">🛠️ How-To Guides</h3><p><strong>Solve specific problems.</strong> Task-oriented recipes for LLM extensions, querying, embeddings, optimization, and storage.</p><p class="text-sm opacity-75 mt-3">LLM Caching • Filtering • Vectorizers • Reranking</p></a>
<a href="cli/" class="block p-5 border border-redis-pen-300 rounded-lg hover:border-redis-red-500 hover:shadow-md transition-all duration-200 no-underline hover:no-underline"><h3 class="mt-0 mb-2">💻 CLI Reference</h3><p><strong>Command-line tools.</strong> Manage indices, inspect stats, and work with schemas using the <code>rvl</code> CLI.</p><p class="text-sm opacity-75 mt-3">rvl index • rvl stats • Schema YAML</p></a>
<a href="use_cases/" class="block p-5 border border-redis-pen-300 rounded-lg hover:border-redis-red-500 hover:shadow-md transition-all duration-200 no-underline hover:no-underline"><h3 class="mt-0 mb-2">💡 Use Cases</h3><p><strong>Apply RedisVL to real-world problems.</strong> See which guides map to your use case.</p><p class="text-sm opacity-75 mt-3">Agent Context • Agent Optimization • Search • RecSys</p></a>
</div>
